--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,19 @@ language: ruby
 cache: bundler
 rvm:
   - 2.2.2
-script: "bundle exec jekyll build"
+
+before_script:
+ - chmod +x ./script/cibuild # or do this locally and commit
+
+# Assume bundler is being used, therefore
+# the `install` step will run `bundle install` by default.
+script: ./script/cibuild
 
 branches:
   only:
     - gh-pages
+
+env:
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+
