--- a/_data/latest.yml
+++ b/_data/latest.yml
@@ -8,114 +8,125 @@ authors:
 headerslidetime: 10000
 wordofthemonth: Respect
 birthdays:
-  - name: Alexander Qian
-  - name: Adam Schrock
-  - name: Mina Suleiman
+  - name: Ke’Shawn Brown
+  - name: Sophia Ciriaco
+  - name: Gustavus Deslandes
 weekendbirthdays:
-  - name: Nathanael Aninweze
-  - name: Glysie Galario
-  - name: Mr. Ozbolt
-  - name: Ehab Omar
-  - name: Darshana Patel
-  - name: Bailey Willis
-  - name: Emily Craycraft
-  - name: Jordyn Miller
-  - name: Jackson Janetski
-  - name: Auria Jones
-  - name: Kalan Smith
-  - name: Michael Wright
-  - name: Zachary Tipton
-  - name: Tyler Fleming
-  - name: Zoe Paxhia-Poppaw
-  - name: Margaret LeRoy
-  - name: Caroline Shultz
-  - name: Rong Zhang
-  - name: Najma Buwe
-  - name: Kyle Watts
+  - name: Timothy Hales
+  - name: Mackenzie Caruthers
+  - name: Matthew Jackson
+  - name: Christopher Johnston
+  - name: Taylor Thompson
+  - name: Emily Adams
+  - name: Gareth Orris
+  - name: Mark Brown
+  - name: Mrs.Griffith
+  - name: Mr. Miller
 events:
-  - date: 2/12
-    name: NO SCHOOL – Conference Comp. Day
-  - date: 2/12 & 2/13
-    name: Darby Theater presents Leading Ladies
-    time: 7 pm
-  - date: 2/15
-    name: NO SCHOOL – President’s Day
-  - date: 2/18
-    name: Cookie Day!
-  - date: 2/18
-    name: Spring Sports Parent Night
-    time: 6pm 
-    location: PAC (MS & HS)
   - date: 2/19
     name: Percussion Ensemble Concert
     time: 7 pm
     location: PAC
-    
+  - date: 2/29 
+    name: Theater Boosters
+    time: 6:45 pm
+    location: X-Theater
+  - date: 3/1
+    name: Coffee Connections with Dr. Marshhausen
+    time: 7:30 am
+    location: Starbucks in Mill Run
+  - date: 3/1
+    name: Harlem Wizards vs. HCSD Staff
+    time: 7 pm
+    location: Darby Main Gym
+  - date: 3/2
+    name: Coffee Connections with Dr. Marshhausen
+    time: 8 am
+    location: Scrambler Maries on Nike Station Way
+  - date: 3/2
+    name: Parent Workshop on Teen Sex Trafficing
+    time: 6 pm
+    location: Heritage Middle School
+  - date: 3/4
+    name: Coffee Connections with Dr. Marshhausen
+    time: 9 am
+    location: Panera Bread on Hilliard Rome Rd.
+  - date: 3/7
+    name: Gridiron Club Meeting
+    time: 7 pm
+    location: Room 160
+  - date: 3/7
+    name: Diamond Club Meeting
+    time: 7pm
+    location: Room 200
+  - date: 3/7–3/11
+    name: OGT Testing Week
+  - date: 3/8
+    name: Winter Band Concert
+    time: 7 pm
+    location: PAC
+  - date: 3/10
+    name: Winter Sports Awards Night
+    time: 5 pm for Middle School, 6:15 for High School in the PAC
+  - date: 3/14
+    name: Board of Education Meeting
+    time: 7 pm
+    location: Brown Elementary
+  - date: 3/15
+    name: NO SCHOOL – Professional Development Day for Staff
+  - date: 3/16
+    name: National Honor Society Induction
+    time: 8:30 am 
+    location: PAC
+  - date: 3/16
+    name: Spring Sports Photo Day
+  - date: 3/17
+    name:End of 3rd 9 Weeks
+  - date: 3/17
+    name: Cookie Day!
+  - date: 3/18-3/24 
+    name: NO SCHOOL - Spring Break
+  - date: 3/25
+    name: NO SCHOOL – Good Friday
+  - date: 3/28
+    name: Athletic Boosters Meeting 
+    time: 7 pm
+    location: Room 200
+  - date: 3/28
+    name: Theater Boosters Meeting 
+    time: 6:45pm 
+    location: X Theater
 announcements:
+  - title: Quarterly Report
+    text: |
+      Check out the most recently quarterly report!  Lots of great things 
+      happening at the Darb!
+      <https://slate.adobe.com/cp/6f9i4/>
   - title: Current AP Students & Parents
     text: | 
       We met with your students on January 22nd to give them the AP Bulletin 
       for Students and Parents, provide them with information about testing, 
       and hand out the registration form. <strong>The deadline to register 
       is Friday, February 19, 2016. You are encouraged to register on-line via 
-      MyPaymentsPlus, </strong> but are also able to register and pay via cash 
+      MyPaymentsPlus,</strong> but are also able to register and pay via cash 
       or check in the Guidance Office. A registration form is required by all students 
       who pay via cash or check. If payment is made through MyPaymentsPlus, 
       this is your registration. Please contact Rachel Creamer or Trevor 
       Maggied with any questions you may have.
-  - title: W.I.S.E Club Event
+  - title: Intramural Bowling
     text: |
-      The Hilliard Darby Women Informing Serving Empowering (WISE) Club will 
-      host “Let Them Speak,” a candlelight vigil to encourage reportings of 
-      sexual and domestic violence. The vigil will be held TONIGHT,  
-      at the Hilliard Municipal Park Amphitheater, 3850 Veterans 
-      Memorial Drive.The free community event will feature guest speakers 
-      and celebrate courageous survivors of sexual and domestic violence that 
-      have come forward, and honor those that have not.  For more information, 
-      contact Hannah Lee at lee.hannah2016@gmail.com or Taylor Shook at 
-      taylor.hannah.shook@gmail.com.
-  - title: Hilliard Darby Theatre presents Leading Ladies
-    image: http://www.hilliardschools.org/hdb/wp-content/uploads/sites/19/1058974_orig.png
-    text: |
-      February 12 & 13 @ 7 pm
+      The new dates for Bowling Intramurals are:
       
-      In this hilarious comedy by the author of Lend Me a Tenor and Moon Over 
-      Buffalo, two English Shakespearean actors, Jack and Leo, find themselves 
-      so down on their luck that they are performing “Scenes from Shakespeare” 
-      on the Moose Lodge circuit in the Amish country of Pennsylvania.  When 
-      they hear that an old lady in York, PA is about to die and leave her 
-      fortune to her two long lost English nephews, they resolve to pass 
-      themselves off as her beloved relatives and get the cash.  The trouble 
-      is, when they get to York, they find out that the relatives aren’t nephews, 
-      but nieces!  Romantic entanglements abound, especially when Leo falls 
-      head-over-petticoat in love with the old lady’s vivacious nice, Meg. who’s 
-      engaged to the local minister.  Meg knows that there’s a wide world out there, 
-      but it’s not until she meets “Maxine and Stephanie” that she finally gets a 
-      taste of it.  Tickets available at https://www.localevelevents.com/events/details/1461
-  - title: Seniors and Juniors
-    image: http://www.hilliardschools.org/hdb/wp-content/uploads/sites/19/VisitDayAnnouncementSlide_Jan16-300x200.jpg
-    text: | 
-      The upcoming day off on Monday, February 15 for Presidents Day is a great 
-      opportunity to discover how Columbus State Community college can be a smart 
-      start to your college degree. There will be a Visit Day held on both the 
-      Columbus Campus and Delaware Campus from 9 a.m. – 12:30 p.m., providing an 
-      opportunity to tour campus, meet faculty, staff and students, find out about 
-      academic programs and services – and discover how Columbus State can help you 
-      reduce or even eliminate college debt. Go to cscc.edu/visitday to reserve your 
-      space. Columbus State’s Visit Days fill up fast, and reservations are required, 
-      so RSVP today.
+      Feb. 23, March 1, 8, 14
+      
+      A $25 fee is due per bowler.  Checks should be made payable to Hilliard Darby HS.  
+      Sign-up sheet and payment collection in the main office.
   - title: Darby Winterguard
     text: |
-      Performance dates for the Hilliard Darby Winterguard.  More information will 
-      be posted regarding performance times, locations & spectator cost in the future.
-      
-       * Feb. 21- Wright State University
+       * Feb. 21- Wright State University – They are performing at 
+         12:40 at Wright State Nutter Center in Dayton. Tickets are $11, 
+         parking is $5. The contest begins at 8 am and awards will be at 5 pm.
        * Feb. 27- Nor win High School (Pittsburg, PA)
-       * Mar. 12- Licking Valley
-       * Mar. 13- Central Crossing
-       * Mar. 20- New London
-       * Apr. 2- OIPA Championships
-       * Apr. 7-9- WGI World Championships
   - title: Harlem Wizards!
     text: |
       The Hilliard Rotary & Hilliard High School Interact Clubs are hosting the 
@@ -139,12 +150,6 @@ announcements:
       For a complete list of available scholarships, visit 
       [our school website](http://www.hilliardschools.org/hdb/guidance/college-information/scholarship-information/)
     scholarships:
-      - name: Columbus Blue Jackets/John H. McConnell Scholarship  
-        date: 2/12/2016
-      - name: Jackie Robinson Foundation Scholarship
-        date: 2/15/2016
-      - name: Bethany Presbyterian Church/Louise Ann Luckey Scholarship
-        date: 2/17/2016
       - name: Alpha Kappa Alspa Sorority Scholarships
         date: 2/19/2016
       - name: Builders Exchange Scholarship
@@ -169,7 +174,6 @@ announcements:
         date: 3/10/2016
       - name: Tau Chi USA Scholars
         date: 3/11/2016
-
   - title: Yearbook
     text: |
       Parents, coaches, and seniors, it is time to start thinking about Senior 
@@ -188,11 +192,22 @@ announcements:
       a short explanation, date, and who is involved.  We are a chronological 
       book so don’t want until the end of the sports season or months later to 
       share!
+  - title: Hilliard Club Hockey
+    text: |
+      The Hilliard Club Hockey team finished regular season play with a 3-1 
+      win against the Northeast Storm and a 3-3 tie against the Dayton Stealth. 
+      Versus the Storm, Justin Fugitt recorded one goal and one assist, while 
+      Chris Johnston and Michael Zapostosky each contributed one goal. Mason 
+      Moldovan was credited with one assist.  In the tie against the Stealth, 
+      Ty Spangler dished out 3 assists.  After suffering a first round loss to 
+      the Northeast Storm in the CBJ Tournament, the Cats will be back in action 
+      this Saturday at 10:00 am at the Chilller Ice Works. Come out and cheer 
+      the Hockey Club on to a victory as they fight their way back into contention 
+      for the tournament cup.
   - title: Darby Sports!
     text: | 
       **Upcoming Senior Nights**
       
        * Gymnastics: 2/18
       
-      [Darby Sports Schedule Feb 8 to Feb 14](http://www.hilliardschools.org/hdb/wp-content/uploads/sites/19/Darby-Sports-Schedule-Feb-8-to-Feb-14.pdf)
-
+      [Darby Sports Schedule Feb 16 to Feb 21](http://www.hilliardschools.org/hdb/wp-content/uploads/sites/19/Darby-Weekly-Sports-Schedule-Feb-16-to-Feb-21.pdf)
