--- a/_data/latest.yml
+++ b/_data/latest.yml
@@ -129,6 +129,7 @@ announcements:
       Students and parents can now sign up for College Announcements through 
       enews.  Go to http://www.hilliardschools.org/ilc/guidance/college-announcements/
   - title: Upcoming Scholarship Deadlines
+    updated: true
     text: | 
       Applications can be picked up in the Guidance Office.
       
@@ -192,9 +193,30 @@ announcements:
       the Hockey Club on to a victory as they fight their way back into contention 
       for the tournament cup.
   - title: Darby Sports!
+    updated: true
     text: | 
       **Upcoming Senior Nights**
       
-       * Gymnastics: 2/18
+      	Swimming & Diving – The Darby Swimming and Diving Teams competed at the District 
+      	Meet this past Saturday at OSU.  The girls team had the highest finish of any 
+      	Darby girls team in history with a 12th place finish.  Olivia Wile and Tia 
+      	McLaughlin both set varsity records in the 100 butterfly and 100 freestyle 
+      	respectively.  Wile and McLaughlin teamed with Mackenzie Caruthers and Claire 
+      	Bergeford to set varsity records in the 200 Medley Relay and 200 Freestyle Relay.  
+      	The boys team finished 24th with Zack Gbur being the only scorer with a 10th place 
+      	finish in the 100 backstroke.
+        
+        Competition Cheer – The Varsity Competition Cheerleading team had another successful 
+        weekend at Dublin Jerome. The girls swept the Buckeye Spirit Series with a 1st Place 
+        win and also High Point and Grand Champs. Their final competition is Sunday, March 6 
+        at OSU where they will be competing at States. Be sure to plan on cheering them on!
+        
+        Gymnastics – The Darby gymnastics team hosted senior night, Thursday evening, against 
+        TriValley.  Seniors included Marissa Huffman and Alexis Piascik.  The team scored a 
+        122.50 .  Finishing in the top 10 were Chloe Shook (vault, bars, beam, floor, and all 
+        around) and Marissa Huffman (vault). Alexis Piascik was voted as gymnast of the meet 
+        for her senior leadership and positive attitude. The  Lady Panthers will compete on 
+        Monday at the Little Districts competition hosted by Thomas Worthington.  Congratulations 
+        ladies and good luck to our seniors!
       
-      [Darby Sports Schedule Feb 16 to Feb 21](http://www.hilliardschools.org/hdb/wp-content/uploads/sites/19/Darby-Weekly-Sports-Schedule-Feb-16-to-Feb-21.pdf)
+      [Darby Sports Schedule Feb 22 to Feb 28](http://www.hilliardschools.org/hdb/wp-content/uploads/sites/19/Darby-Weekly-Schedule-Feb-22-to-Feb-28.pdf)
