Forgot to add the birthdays

--- a/_data/latest.yml
+++ b/_data/latest.yml
@@ -8,20 +8,9 @@ authors:
 headerslidetime: 10000
 wordofthemonth: Respect
 birthdays:
-  - name: Ke’Shawn Brown
-  - name: Sophia Ciriaco
-  - name: Gustavus Deslandes
-weekendbirthdays:
-  - name: Timothy Hales
-  - name: Mackenzie Caruthers
-  - name: Matthew Jackson
-  - name: Christopher Johnston
-  - name: Taylor Thompson
-  - name: Emily Adams
-  - name: Gareth Orris
-  - name: Mark Brown
-  - name: Mrs.Griffith
-  - name: Mr. Miller
+  - name: Bailey Goff
+  - name: Quinn Coppess
+  - name: Ryan Griesmer
 events:
   - date: 2/29 
     name: Theater Boosters
