--- a/_data/latest.yml
+++ b/_data/latest.yml
@@ -8,9 +8,12 @@ authors:
 headerslidetime: 10000
 wordofthemonth: Respect
 birthdays:
-  - name: Bailey Goff
-  - name: Quinn Coppess
-  - name: Ryan Griesmer
+  - name: Kathryn Wisecup
+  - name: Katherine Geers
+  - name: Emily Wolf
+  - name: Najana Hopson
+  - name: Blaize Shiebler
+  - name: Mrs. Leeka
 events:
   - date: 2/29 
     name: Theater Boosters
@@ -82,13 +85,31 @@ events:
     time: 6:45pm 
     location: X Theater
 announcements:
-  - title: Mathletes
+  - title: Backpack Drive
     new: true
+    image: http://www.hilliardschools.org/hdb/wp-content/uploads/sites/19/Backpack-Drive-464x600.jpg
+  - title: Learning with Your iPad
+    new: true
+    text: |
+      February 24, 2016 • 6:30-8:00 pm at Memorial Middle School Media Center
+      
+      Description: This workshop will highlight some of the apps used by our students in the One2One 
+      initiative. We will have presentation stations for each app so you can come and learn about the 
+      apps you’re interested in and go from station to station at your own pace.
+      
+      Topics will include:
+      * Canvas
+      * iBooks
+      * Notability
+      * Explain Everything
+      * Google Apps for Education (Drive, Docs, Sheets, Slides)
+      * iMovie
+      * Keynote
+  - title: Mathletes
     text: |
       Mathletes will practice after school Wednesday in room 104.  Please turn in permission 
       slips for Saturday’s competition at Ohio State as soon as possible to Mr. Miller.
   - title: Student Groups
-    new: true
     text: |
       Student Groups with Mrs. Canty and Ms. Monseur Durr will meet in the computer lab 254 
       during 7th and 8th periods on Thursday. Please check CANVAS for your specific meeting 
@@ -125,12 +146,6 @@ announcements:
       For a complete list of available scholarships, visit 
       [our school website](http://www.hilliardschools.org/hdb/guidance/college-information/scholarship-information/)
     scholarships:
-      - name: Alpha Kappa Alspa Sorority Scholarships
-        date: 2/19/2016
-      - name: Builders Exchange Scholarship
-        date: 2/19/2016
-      - name: Hilliard Darby Athletic Boosters/Student Athlete Award
-        date: 2/22/2016
       - name: ASMC Buckeye Chapter Scholarship
         date: 2/29/2016
       - name: Buick Achievers Scholarship Program
@@ -172,28 +187,5 @@ announcements:
   - title: Darby Sports!
     updated: true
     text: | 
-      **Upcoming Senior Nights**
-      
-      Swimming & Diving – The Darby Swimming and Diving Teams competed at the District 
-      Meet this past Saturday at OSU.  The girls team had the highest finish of any 
-      Darby girls team in history with a 12th place finish.  Olivia Wile and Tia 
-      McLaughlin both set varsity records in the 100 butterfly and 100 freestyle 
-      respectively.  Wile and McLaughlin teamed with Mackenzie Caruthers and Claire 
-      Bergeford to set varsity records in the 200 Medley Relay and 200 Freestyle Relay.  
-      The boys team finished 24th with Zack Gbur being the only scorer with a 10th place 
-      finish in the 100 backstroke.
-      
-      Competition Cheer – The Varsity Competition Cheerleading team had another successful 
-      weekend at Dublin Jerome. The girls swept the Buckeye Spirit Series with a 1st Place 
-      win and also High Point and Grand Champs. Their final competition is Sunday, March 6 
-      at OSU where they will be competing at States. Be sure to plan on cheering them on!
-      
-      Gymnastics – The Darby gymnastics team hosted senior night, Thursday evening, against 
-      TriValley.  Seniors included Marissa Huffman and Alexis Piascik.  The team scored a 
-      122.50 .  Finishing in the top 10 were Chloe Shook (vault, bars, beam, floor, and all 
-      around) and Marissa Huffman (vault). Alexis Piascik was voted as gymnast of the meet 
-      for her senior leadership and positive attitude. The  Lady Panthers will compete on 
-      Monday at the Little Districts competition hosted by Thomas Worthington.  Congratulations 
-      ladies and good luck to our seniors!
       
       [Darby Sports Schedule Feb 22 to Feb 28](http://www.hilliardschools.org/hdb/wp-content/uploads/sites/19/Darby-Weekly-Schedule-Feb-22-to-Feb-28.pdf)
