Add last updated date to all latest announments.

--- a/_data/latest.yml
+++ b/_data/latest.yml
@@ -5,6 +5,7 @@ authors:
   - name: Alex Shafer 
     username: enzanki-ars 
     role: Developer
+lastupdate: February 26th, 2016
 headerslidetime: 10000
 wordofthemonth: Respect
 birthdays:
