--- a/_data/latest.yml
+++ b/_data/latest.yml
@@ -5,15 +5,13 @@ authors:
   - name: Alex Shafer 
     username: enzanki-ars 
     role: Developer
-lastupdate: February 26th, 2016
+lastupdate: February 29th, 2016
 headerslidetime: 10000
 wordofthemonth: Respect
 birthdays:
-  - name: Leny Torrico Sahonero
-  - name: Jason Fleischman
-  - name: Taylor Leone
-  - name: William Sayre
-  - name: Ms. Hurley
+  - name: Zakriya Warsame
+  - name: Colton Wood
+  - name: Garrett Wood
 weekendbirthdays:
   - name: Audrey Craddick
   - name: Edleen Nieto
@@ -94,8 +92,6 @@ events:
 announcements:
   - title: Backpack Drive
     image: http://www.hilliardschools.org/hdb/wp-content/uploads/sites/19/Backpack-Drive-464x600.jpg
-  - title: Time Out Finals
-    image: http://www.hilliardschools.org/hdb/wp-content/uploads/sites/19/finals-promo-600x463.jpg
   - title: Intramural Bowling
     text: |
       The new dates for Bowling Intramurals are:
@@ -166,8 +162,7 @@ announcements:
       book so don’t want until the end of the sports season or months later to 
       share!
   - title: Darby Sports!
-    updated: true
     text: | 
-
+      
       
       [Darby Sports Schedule Feb 22 to Feb 28](http://www.hilliardschools.org/hdb/wp-content/uploads/sites/19/Darby-Weekly-Schedule-Feb-22-to-Feb-28.pdf)
