--- a/_data/latest.yml
+++ b/_data/latest.yml
@@ -5,13 +5,12 @@ authors:
   - name: Alex Shafer 
     username: enzanki-ars 
     role: Developer
-lastupdate: February 29th, 2016
+lastupdate: March 1st, 2016
 headerslidetime: 10000
 wordofthemonth: Respect
 birthdays:
-  - name: Zakriya Warsame
-  - name: Colton Wood
-  - name: Garrett Wood
+  - name: Camryn Castle
+  - name: Faith Leach
 weekendbirthdays:
   - name: Audrey Craddick
   - name: Edleen Nieto
@@ -20,14 +19,6 @@ weekendbirthdays:
   - name: David Huff
   - name: Annie Rauch
 events:
-  - date: 2/29 
-    name: Theater Boosters
-    time: 6:45 pm
-    location: X-Theater
-  - date: 3/1
-    name: Coffee Connections with Dr. Marshhausen
-    time: 7:30 am
-    location: Starbucks in Mill Run
   - date: 3/1
     name: Harlem Wizards vs. HCSD Staff
     time: 7 pm
@@ -92,14 +83,6 @@ events:
 announcements:
   - title: Backpack Drive
     image: http://www.hilliardschools.org/hdb/wp-content/uploads/sites/19/Backpack-Drive-464x600.jpg
-  - title: Intramural Bowling
-    text: |
-      The new dates for Bowling Intramurals are:
-      
-      Feb. 23, March 1, 8, 14
-      
-      A $25 fee is due per bowler.  Checks should be made payable to Hilliard Darby HS.  
-      Sign-up sheet and payment collection in the main office.
   - title: Harlem Wizards!
     text: |
       The Hilliard Rotary & Hilliard High School Interact Clubs are hosting the 
@@ -123,10 +106,6 @@ announcements:
       For a complete list of available scholarships, visit 
       [our school website](http://www.hilliardschools.org/hdb/guidance/college-information/scholarship-information/)
     scholarships:
-      - name: ASMC Buckeye Chapter Scholarship
-        date: 2/29/2016
-      - name: Buick Achievers Scholarship Program
-        date: 2/29/2016
       - name: Education First Credit Union Scholarship
         date: 3/1/2016
       - name: OAPSE/AFSCME Memorial Scholarship Foundation Program
@@ -164,5 +143,8 @@ announcements:
   - title: Darby Sports!
     text: | 
       
+      * State Gymnastics Meet: Friday & Saturday (Chloe Shook)
+      * State Wrestling Meet: Thursday, Friday & Saturday (Jared Ball)
+      * State Cheer Competition: Sunday
       
       [Darby Sports Schedule Feb 22 to Feb 28](http://www.hilliardschools.org/hdb/wp-content/uploads/sites/19/Darby-Weekly-Schedule-Feb-22-to-Feb-28.pdf)
