--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ rvm:
   - 2.3.0
 
 before_script:
- - chmod +x ./script/* # or do this locally and commit
+  - chmod +x ./script/* # or do this locally and commit
+  - npm install -g htmlhint jshint csslint
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
